Fix mobile input box alignment

--- a/magic/style.css
+++ b/magic/style.css
@@ -51,11 +51,12 @@
 
 	.instructions {
 		margin: 10px;
-		font-size: 10px;
+		font-size: 12px;
 	}
 
 	.card-input {
-		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	.btn {
